CICD/Kubernetes/Yamls/webApp/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: development
  name: flask-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: devopsinterview/webapp:v1
        resources:
          limits:
            memory: "100Mi"
            cpu: " 200m"
          requests:
            memory: "100Mi"

        ports:
        - containerPort: 5000
