CICD/Kubernetes/Yamls/webApp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-nodeport-svc
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 32500
  selector:
    app: test-app
